// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render _override props 1`] = `
<div
  class="components-olaf wp-components-olaf olaf ic-ohd9s ic-192yz5d css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
>
  Warm Hugs!
</div>
`;

exports[`props should render context props 1`] = `
<div
  class="components-olaf wp-components-olaf ic-ohd9s ic-192yz5d css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
>
  Warm Hugs
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="components-olaf wp-components-olaf ic-ohd9s ic-192yz5d css-1nqjm19"
  data-g2-c16t="true"
  data-g2-component="Olaf"
/>
`;

exports[`props should render css props + provided css 1`] = `
<div>
  <div
    class="components-olaf wp-components-olaf olaf ic-ohd9s ic-192yz5d css-w4hnsq"
    data-g2-c16t="true"
    data-g2-component="Olaf"
  />
</div>
`;

exports[`props should render css props 1`] = `
<div>
  <div
    class="components-olaf wp-components-olaf olaf ic-ohd9s ic-192yz5d css-hs2bux"
    data-g2-c16t="true"
    data-g2-component="Olaf"
  />
  <div
    class="components-olaf wp-components-olaf olaf ic-ohd9s ic-192yz5d css-1nqjm19"
    data-g2-c16t="true"
    data-g2-component="Olaf"
  />
</div>
`;
